--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,8 @@
 	<title>{{ site.title }}</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<!--[if lte IE 8]><script src="{{ "/assets/js/ie/html5shiv.js" | absolute_url }}"></script><![endif]-->
-	<link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "/assets/css/ie9.css" | absolute_url }}" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "/assets/css/ie8.css" | absolute_url }}" /><![endif]-->
+	<!--[if lte IE 8]><script src="{{ "assets/js/ie/html5shiv.js" | absolute_url }}"></script><![endif]-->
+	<link rel="stylesheet" href="{{ "assets/css/main.css" | absolute_url }}" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "assets/css/ie9.css" | absolute_url }}" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "assets/css/ie8.css" | absolute_url }}" /><![endif]-->
 </head>
