--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>{{ page.landing-title }}</h1>                
+                <h1>{{ page.landing-title }}</h1>
             </header>
             <div class="content">
                 <p>{{ site.description }}</p>
@@ -25,6 +25,10 @@
                 </ul>
             </div>
         </div>
+    </section>
+
+    <section id="full-logo" class="special">
+        <img class="image fit" src="assets/images/logo-transparent.png" alt="logo"/>
     </section>
 
     <!-- Main -->
