night time work

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -59,6 +59,12 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
+	p.lead {
+		font-size: 1.3em;
+		font-weight: _font(weight);
+		letter-spacing: _font(letter-spacing);
+	}
+
 	h1, h2, h3, h4, h5, h6 {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
