--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,7 @@
         <!-- Two -->
         <section id="more">
             <div class="inner">
-                <header class="major">
-                    <h2>About</h2>
-                </header>
-                <p>{{ content }}</p>
+                {{ content }}
                 <ul class="actions">
                     <li><a href="apply.html" class="button next">Apply for a role</a></li>
                 </ul>
