--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,30 +1,31 @@
 <section id="one" class="tiles">
-        {% if site.tiles-source == 'posts' %}
-	{% for post in site.posts limit:site.tiles-count %}	
-        <article>
-                <span class="image">
+    {% if site.tiles-source == 'posts' %}
+    	{% for post in site.posts limit:site.tiles-count %}
+            <article>
+                    <span class="image">
                         <img src="{{ post.image }}" alt="" />
-                </span>
-                <header class="major">
+                    </span>
+                    <header class="major">
                         <h3><a href="{{ post.url | relative_url }}" class="link">{{ post.title }}</a></h3>
                         <p>{{ post.description }}</p>
-                </header>
-        </article>
-	{% endfor %}
-        {% endif %}
-        {% if site.tiles-source == 'pages' %}
-	{% for page in site.pages limit:site.tiles-count | sort:order %}
-        {% if page.layout == 'page' %}
-        <article>
-                <span class="image">
+                    </header>
+            </article>
+    	{% endfor %}
+    {% endif %}
+    {% if site.tiles-source == 'pages' %}
+        {% assign pages = site.pages | sort:"order"  %}
+	    {% for page in pages limit:site.tiles-count %}
+            {% if page.show-in-nav == true %}
+                <article>
+                    <span class="image">
                         <img src="{{ page.image }}" alt="" />
-                </span>
-                <header class="major">
+                    </span>
+                    <header class="major">
                         <h3><a href="{{ page.url | relative_url }}" class="link">{{ page.title }}</a></h3>
                         <p>{{ page.description }}</p>
-                </header>
-        </article>	
-        {% endif %}
-	{% endfor %}
-        {% endif %}
+                    </header>
+                </article>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
 </section>
