--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,13 @@
     <!-- Banner -->
     <section id="banner" class="major">
         <div class="inner">
-            <header class="major">
-                <h1>{{ page.landing-title }}</h1>
+            <header>
+                <img  class="logo" src="assets/images/logo-transparent.png" alt="Freak Show Logo"/>
             </header>
             <div class="content">
-                <p>{{ site.description }}</p>
+                <p>
+                    {{ site.description }}
+                </p>
                 <ul class="actions">
                     <li><a href="#more" class="button next scrolly">Learn more</a></li>
                 </ul>
