--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -31,17 +31,17 @@
 // Palette.
 	$palette: (
 		bg:					#0e2b3d,
-		bg-alt:				#0e2b3d,
+		bg-alt:				#0c2433,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
 		highlight:			#fee432,
-		accent1:			#2D6689,
-		accent2:			#60a6a3,
-		accent3:			#aa5C44,
-		accent4:			#aA271F,
-		accent5:			#7e89b8,
-		accent6:			#77b5b4
+		accent1:			#4d302e,
+		accent2:			#354d4b,
+		accent3:			#4d3d2e,
+		accent4:			#273e4d,
+		accent5:			#363a4d,
+		accent6:			#66515c
 	);
