--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -47,12 +47,17 @@
 
 			h3 {
 				font-size: 1.75em;
+				text-shadow: 0 0 3px rgba(0,0,0,0.4);
 
 				a {
 					&:hover {
 						color: inherit !important;
 					}
 				}
+			}
+
+			p {
+				text-shadow: 0 0 3px rgba(0,0,0,0.4);
 			}
 
 			.link.primary {
