--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -7,7 +7,7 @@
 /* Main */
 
 	#main {
-		background-color: _palette(bg-alt);
+		//background-color: _palette(bg-alt);
 
 		> * {
 			border-top: solid 1px _palette(border);
@@ -34,7 +34,7 @@
 		> img {
 			margin: 0  auto;
 			display: block;
-			max-width: 33%;			
+			max-width: 33%;
 			left: 0;
 			@include vendor('transition', 'all 3s ease');
 		}
@@ -47,4 +47,3 @@
 			}
 		}
 	}
-	
