--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -71,6 +71,7 @@
 	@import 'components/tiles';
 	@import 'components/contact-method';
 	@import 'components/spotlights';
+	@import 'components/character';
 
 // Layout.
 
