--- a/_includes/practical.html
+++ b/_includes/practical.html
@@ -1,7 +1,7 @@
 <table>
 	<tr>
-		<th style="width: 33%">Number of co-creators</th>
-		<td>50.5</td>
+		<th style="width: 33%">Number of roles</th>
+		<td>45 &frac12;</td>
 	</tr>
 	<tr>
 		<th>Price</th>
@@ -17,14 +17,14 @@
 	</tr>
 	<tr>
 		<th>Application opens</th>
-		<td>#####, 2017</td>
+		<td>February 20, 2017</td>
 	</tr>
 	<tr>
 		<th>Application ends</th>
-		<td>#####, 2017</td>
+		<td>March 20, 2017</td>
 	</tr>
 	<tr>
 		<th>Casting completes</th>
-		<td>#####, 2017</td>
+		<td>April 20, 2017</td>
 	</tr>
 </table>
