--- a/_sass/components/_character.scss
+++ b/_sass/components/_character.scss
@@ -3,7 +3,13 @@ ul.characters {
     padding: 0;
     li {
         padding: 0;
+        margin-bottom: 2em;
+        clear: both;
+        > div {
+            margin-bottom: .5em;
+        }
         .name {
+            font-size: 22px;
             text-transform: uppercase;
             display: inline-block;
             font-weight: bold;
