--- a/_sass/components/_image.scss
+++ b/_sass/components/_image.scss
@@ -60,3 +60,21 @@
 			}
 		}
 	}
+
+	.video {
+		position: relative;
+		padding-bottom: 56.25%;
+		margin-bottom: 40px;
+		height: 0;
+		overflow: hidden;
+		max-width: 100%;
+		border: 2px solid white;
+		> iframe, > object, > embed {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+
+	}
