--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,4 +1,4 @@
-<section id="one" class="tiles">
+<section id="one" class="tiles colorz">
     {% if site.tiles-source == 'posts' %}
     	{% for post in site.posts limit:site.tiles-count %}
             <article>
