--- a/_sass/components/_character.scss
+++ b/_sass/components/_character.scss
@@ -59,11 +59,26 @@ ul.characters {
 }
 
 .application-form {
-    width: 66vw;
-    height: 66vh;
+    width: 80vw;
+    height: 100vh;
 
     @include breakpoint(small) {
-        width: 80vw;
-        height: 66vh;
+        width: 100%;
+        height: 100vh;
+    }
+}
+
+
+.responsive-embed {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
     }
 }
