--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -70,83 +70,92 @@
 				z-index: 4;
 			}
 
-			&:before {
-				@include vendor('transition', 'opacity 0.5s ease');
-				bottom: 0;
-				content: '';
-				display: block;
-				height: 100%;
-				left: 0;
-				opacity: 0.85;
-				position: absolute;
-				width: 100%;
-				z-index: 2;
-			}
-
-			&:after {
-				background-color: transparentize(_palette(bg), 0.75);
-				content: '';
-				display: block;
-				height: 100%;
-				left: 0;
-				position: absolute;
-				top: 0;
-				width: 100%;
-				z-index: 1;
-			}
-
-			&:hover {
-				&:before {
-					opacity: 0;
-				}
-			}
-
-			&.is-transitioning {
-				@include vendor('transform', 'scale(0.95)');
-				@include vendor('filter', 'blur(0.5em)');
-				opacity: 0;
-			}
-
 			&:nth-child(4n - 1),
 			&:nth-child(4n - 2) {
 				width: 60%;
 			}
 
-			&:nth-child(6n - 5) {
+
+			}
+			&.colorz {
+				article {
 				&:before {
-					background-color: _palette(accent1);
+					@include vendor('transition', 'opacity 0.5s ease');
+					bottom: 0;
+					content: '';
+					display: block;
+					height: 100%;
+					left: 0;
+					opacity: 0.85;
+					position: absolute;
+					width: 100%;
+					z-index: 2;
 				}
+
+				&:after {
+					background-color: transparentize(_palette(bg), 0.75);
+					content: '';
+					display: block;
+					height: 100%;
+					left: 0;
+					position: absolute;
+					top: 0;
+					width: 100%;
+					z-index: 1;
+				}
+
+				&:hover {
+					&:before {
+						opacity: 0;
+					}
+				}
+
+				&.is-transitioning {
+					@include vendor('transform', 'scale(0.95)');
+					@include vendor('filter', 'blur(0.5em)');
+					opacity: 0;
+				}
+
+
+
+				&:nth-child(6n - 5) {
+					&:before {
+						background-color: _palette(accent1);
+					}
+				}
+
+				&:nth-child(6n - 4) {
+					&:before {
+						background-color: _palette(accent2);
+					}
+				}
+
+				&:nth-child(6n - 3) {
+					&:before {
+						background-color: _palette(accent3);
+					}
+				}
+
+				&:nth-child(6n - 2) {
+					&:before {
+						background-color: _palette(accent4);
+					}
+				}
+
+				&:nth-child(6n - 1) {
+					&:before {
+						background-color: _palette(accent5);
+					}
+				}
+
+				&:nth-child(6n) {
+					&:before {
+						background-color: _palette(accent6);
+					}
+				}
+			
 			}
 
-			&:nth-child(6n - 4) {
-				&:before {
-					background-color: _palette(accent2);
-				}
-			}
-
-			&:nth-child(6n - 3) {
-				&:before {
-					background-color: _palette(accent3);
-				}
-			}
-
-			&:nth-child(6n - 2) {
-				&:before {
-					background-color: _palette(accent4);
-				}
-			}
-
-			&:nth-child(6n - 1) {
-				&:before {
-					background-color: _palette(accent5);
-				}
-			}
-
-			&:nth-child(6n) {
-				&:before {
-					background-color: _palette(accent6);
-				}
-			}
 		}
 
 		@include breakpoint(large) {
