hover effect for character images

--- a/_sass/components/_character.scss
+++ b/_sass/components/_character.scss
@@ -2,6 +2,7 @@ ul.characters {
     list-style: none;
     padding: 0;
     li {
+        position: relative;
         padding: 0;
         margin-bottom: 2em;
         clear: both;
@@ -35,17 +36,28 @@ ul.characters {
             border-radius: 74px;
             float: right;
             margin: 1em 0 1em 1em;
+            transition: all 1s ease;
+            &:hover  {
+                width: calc(148px + 4em);
+                height: calc(148px + 4em);
+                border-radius: calc((148px + 4em) / 2);
+                box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+                margin: -3em 0 1em -3em;
+            }
         }
         &:nth-child(odd) {
             .image {
                 float: left;
-                margin: 1.25em 1.25em 1.25em 0;
+                margin: 1em 1em 1em 0;
+                &:hover {
+                    margin: -3em -3em 1em 0;
+                }
             }
         }
         .button {
             margin-top: .5em 0 4em 0;
             opacity: 0;
-            transition: all 1s;
+            transition: all 1s ease;
 
         }
 
@@ -53,6 +65,7 @@ ul.characters {
             .button {
                 opacity: 1;
             }
+
 
         }
     }
