--- a/_sass/components/_character.scss
+++ b/_sass/components/_character.scss
@@ -34,24 +34,15 @@ ul.characters {
             width: 148px;
             height: 148px;
             border-radius: 74px;
-            float: right;
-            margin: 1em 0 1em 1em;
+            float: left;
+            margin: 0 1em 1em 0;
             transition: all 1s ease;
             &:hover  {
                 width: calc(148px + 4em);
                 height: calc(148px + 4em);
                 border-radius: calc((148px + 4em) / 2);
                 box-shadow: 0 10px 20px rgba(0,0,0,0.5);
-                margin: -3em 0 1em -3em;
-            }
-        }
-        &:nth-child(odd) {
-            .image {
-                float: left;
-                margin: 1em 1em 1em 0;
-                &:hover {
-                    margin: -3em -3em 1em 0;
-                }
+                margin: 0 -3em -3em 0;
             }
         }
         .button {
