Changed front page images and logo. Added files for all characters

--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -13,7 +13,7 @@
     	{% endfor %}
     {% endif %}
     {% if site.tiles-source == 'pages' %}
-        {% assign pages = site.pages | sort:"order"  %}
+        {% assign pages = site.pages | sort: "position"  %}
 	    {% for page in pages limit:site.tiles-count %}
             {% if page.show-in-nav == true %}
                 <article>
