LARP->larp, changes to practical

--- a/_includes/practical.html
+++ b/_includes/practical.html
@@ -5,7 +5,9 @@
 	</tr>
 	<tr>
 		<th>Price</th>
-		<td>€350. We are applying for funding through <a href="http://larpfund.org/" target="_blank">Larp Fund</a>.</td>
+		<td>€350. We have two <a href="http://larpfund.org/" target="_blank">Larpfund</a> tickets at half price.
+			Once cast we expect payment in 30 days via bank transfer or Paypal.
+		</td>
 	</tr>
 	<tr>
 		<th>Location</th>
@@ -13,7 +15,7 @@
 	</tr>
 	<tr>
 		<th>Game dates</th>
-		<td>15&ndash;18 September, 2017</td>
+		<td>15&ndash;18 September, 2017. (Friday 20:00&ndash;Monday 10:00)</td>
 	</tr>
 	<tr>
 		<th>Application opens</th>
