--- a/_sass/components/_character.scss
+++ b/_sass/components/_character.scss
@@ -67,6 +67,7 @@ ul.characters {
     padding-bottom: 75%;
     height: 0;
     overflow: hidden;
+    margin-bottom: 1.5em;
     iframe {
         position: absolute;
         top: 0;
