--- a/_sass/components/_character.scss
+++ b/_sass/components/_character.scss
@@ -42,6 +42,16 @@ ul.characters {
             }
         }
 
+        .image.left {
+            left: -20px;
+            margin-right: .5em;
+        }
+
+        .image.right {
+            right: -20px;
+            margin-left: .5em;
+        }
+
     }
 
     @include breakpoint(small) {
@@ -52,6 +62,8 @@ ul.characters {
                 clear: both;
                 margin: 5em auto 1.25em auto;
                 max-width: 50%;
+                left: 0;
+                right: 0;
             }
         }
     }
