--- a/_includes/practical.html
+++ b/_includes/practical.html
@@ -15,7 +15,7 @@
 	</tr>
 	<tr>
 		<th>Game dates</th>
-		<td>15&ndash;18 September, 2017. (Friday 20:00&ndash;Monday 10:00)</td>
+		<td>15&ndash;18 September, 2017. Friday 20:00&ndash;Monday 10:00. No re-runs.</td>
 	</tr>
 	<tr>
 		<th>Application opens</th>
